Fixing width from the dropdown nav on mobiles responsive

--- a/src/App.css
+++ b/src/App.css
@@ -475,6 +475,7 @@ p {
 	position: fixed;
 	right: 10%;
 	top: 0;
+	width: 100%;
 }
 
 .header {
