--- a/src/css/header.css
+++ b/src/css/header.css
@@ -4,6 +4,7 @@
 	position: fixed;
 	right: 10%;
 	top: 0;
+	width: 100%;
 }
 
 .header {
